welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:15: error: value update is not a member of Boolean
  } while (crossing()=false)
           ^